--- a/app/src/main/res/layout/activity_delete_manager_acc.xml
+++ b/app/src/main/res/layout/activity_delete_manager_acc.xml
@@ -26,12 +26,12 @@
             android:layout_margin="15dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="Are you sure you want to delete doctor account "
+            android:text="Are you sure you want to delete campaign manager account "
             android:textSize="30sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="13dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
