--- a/app/src/main/res/layout/activity_manager_acc.xml
+++ b/app/src/main/res/layout/activity_manager_acc.xml
@@ -29,7 +29,7 @@
             android:background="@color/colorPrimary"
             android:padding="10dp"
             android:shadowColor="#FFFFFF"
-            android:text="Search Doctor ID"
+            android:text="Search Campaign Manager ID"
             android:textColor="#FFFFFF"
             android:textSize="24sp" />
 
@@ -45,7 +45,7 @@
             android:background="@color/colorPrimary"
             android:padding="10dp"
             android:shadowColor="#FFFFFF"
-            android:text="Create New Doctor Account"
+            android:text="Create New Campaign Manager Account"
             android:textColor="#FFFFFF"
             android:textSize="24sp" />
 
