--- a/app/src/main/res/layout/activity_manager_acc_success.xml
+++ b/app/src/main/res/layout/activity_manager_acc_success.xml
@@ -40,7 +40,7 @@
                 android:layout_marginLeft="15dp"
                 android:layout_weight="3"
                 android:gravity="center_vertical"
-                android:text="New Doctor Account Created Successfully!"
+                android:text="New Campaign Manager Account Created Successfully!"
                 android:textSize="30sp" />
         </LinearLayout>
 
