--- a/app/src/main/res/layout/activity_manager_main.xml
+++ b/app/src/main/res/layout/activity_manager_main.xml
@@ -34,7 +34,7 @@
             android:layout_margin="10dp"
             android:layout_weight="3"
             android:gravity="center_vertical"
-            android:text="Doctor ID - "
+            android:text="Campaign Manager ID - "
             android:textSize="24sp" />
     </LinearLayout>
 
