--- a/app/src/main/res/layout/activity_donations.xml
+++ b/app/src/main/res/layout/activity_donations.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".editDonAcc">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".DonationsActivity">
 
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:orientation="vertical"
     android:scrollbars="none">
 
     <LinearLayout
@@ -21,9 +21,8 @@ tools:context=".editDonAcc">
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-
         <TextView
-            android:id="@+id/username"
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -37,18 +36,17 @@ tools:context=".editDonAcc">
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:textSize="20dp"
-            android:text="Donor ID:xxxxxx" />
+            android:text="Donor ID:xxxxxx"
+            android:textSize="20dp" />
 
         <ImageView
-            android:id="@+id/user"
+            android:id="@+id/avatar"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="30dp"
-            android:src="@drawable/user" />
-
+            android:src="@drawable/avatarnew" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -56,99 +54,78 @@ tools:context=".editDonAcc">
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/firstname"
+                android:id="@+id/cid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="10dp"
+                android:text="Campaign ID"
+                android:textSize="17dp" />
+
+            <TextView
+                android:id="@+id/place"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="10dp"
+                android:text="Place of Donation"
+                android:textSize="17dp" />
+
+            <TextView
+                android:id="@+id/amt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
+                android:text="Amount"
+                android:textSize="17dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/bloodtype"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="3dp"
                 android:layout_marginRight="40dp"
-                android:textSize="15dp"
-                android:text="First Name" />
+                android:text="C01"
+                android:textSize="15dp" />
 
-            <EditText
-                android:id="@+id/firstnamet"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:hint="" />
+
 
         </LinearLayout>
 
-        <LinearLayout
+        <View
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="1dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="#dddddd"/>
 
-            <TextView
-                android:id="@+id/lastname"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="3dp"
-                android:layout_marginRight="40dp"
-                android:textSize="15dp"
-                android:text="Last Name"/>
 
-            <EditText
-                android:id="@+id/lastnamet"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:hint="" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-            android:id="@+id/gender"
-            android:layout_width="100dp"
+        <TextView
+            android:id="@+id/table"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="3dp"
-            android:layout_marginRight="40dp"
-            android:textSize="15dp"
-            android:text="Gender" />
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Add new donation details"
+            android:textSize="17dp" />
 
-            <EditText
-                android:id="@+id/gendert"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:hint="" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-            android:id="@+id/birthday"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="3dp"
-            android:layout_marginRight="40dp"
-            android:textSize="15dp"
-            android:text="Birthday" />
-
-            <EditText
-                android:id="@+id/birthdayt"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:hint="" />
-
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -161,13 +138,11 @@ tools:context=".editDonAcc">
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="3dp"
                 android:layout_marginRight="40dp"
-                android:textSize="15dp"
-                android:text="Age" />
+                android:text="Campaign ID"
+                android:textSize="15dp" />
 
             <EditText
-                android:id="@+id/aget"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -181,18 +156,16 @@ tools:context=".editDonAcc">
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/address"
+                android:id="@+id/weight"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="3dp"
                 android:layout_marginRight="40dp"
-                android:textSize="15dp"
-                android:text="Address"/>
+                android:text="Place of donation"
+                android:textSize="15dp" />
 
             <EditText
-                android:id="@+id/addresst"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -206,18 +179,39 @@ tools:context=".editDonAcc">
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/email"
+                android:id="@+id/height"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="3dp"
                 android:layout_marginRight="40dp"
-                android:textSize="15dp"
-                android:text="Email"/>
+                android:text="Amount"
+                android:textSize="15dp" />
 
             <EditText
-                android:id="@+id/emailt"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:hint="" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/diseases"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="40dp"
+                android:text="Comments"
+                android:textSize="15dp" />
+
+            <EditText
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -226,32 +220,31 @@ tools:context=".editDonAcc">
         </LinearLayout>
 
         <Button
-            android:id="@+id/button"
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
-            android:textAllCaps="false"
-            android:textSize="15dp"
             android:layout_marginBottom="100dp"
+            android:onClick="toActivity6"
+            android:text="Save"
+            android:textAllCaps="false"
             android:background="@color/colorPrimary"
             android:textColor="@android:color/white"
-            android:text="Save changes" />
+            android:textSize="15dp" />
 
 
 
     </LinearLayout>
-
 </ScrollView>
 
-<com.google.android.material.bottomnavigation.BottomNavigationView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/bottom_navigation"
-    app:itemBackground="@color/grey"
-    app:itemTextColor="@drawable/selector"
-    app:itemIconTint="@drawable/selector"
-    app:menu="@menu/menu_navigation_2"
-    android:layout_alignParentBottom="true"/>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/bottom_navigation"
+        app:itemBackground="@android:color/white"
+        app:itemTextColor="@drawable/selector"
+        app:itemIconTint="@drawable/selector"
+        app:menu="@menu/menu_navigation"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
