--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -21,7 +21,7 @@
         app:itemBackground="@color/grey"
         app:itemTextColor="@drawable/selector"
         app:itemIconTint="@drawable/selector"
-        app:menu="@menu/menu_navigation"
+        app:menu="@menu/menu_navigation_2"
         android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
