--- a/app/src/main/res/layout/doctor.xml
+++ b/app/src/main/res/layout/doctor.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".profile">
+    tools:context=".Doctor">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF"
-        android:orientation="vertical"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
+        android:orientation="vertical"
         android:scrollbars="none">
 
         <LinearLayout
@@ -21,96 +21,33 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+
             <TextView
-                android:id="@+id/username"
+                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="40dp"
-                android:text="Username"
+                android:layout_marginBottom="30dp"
+                android:text="Doctor ID"
                 android:textSize="25dp" />
 
-            <TextView
-                android:id="@+id/donorid"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:textSize="20dp"
-                android:text="Donor ID:xxxxxx" />
 
             <ImageView
-                android:id="@+id/user"
+                android:id="@+id/avatar"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="30dp"
-                android:src="@drawable/user" />
+                android:src="@drawable/avatarnew" />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/firstname"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
-                    android:textSize="15dp"
-                    android:text="First Name" />
-
-                <TextView
-                    android:id="@+id/firstnamet"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:textSize="15dp"
-                    android:text="Thamal" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/lastname"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
-                    android:textSize="15dp"
-                    android:text="Last Name"/>
-
-                <TextView
-                    android:id="@+id/lastnamet"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:textSize="15dp"
-                    android:text="Nanayakkara"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginLeft="50dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -120,28 +57,29 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginRight="10dp"
                     android:textSize="15dp"
-                    android:text="Gender" />
+                    android:text="Username" />
 
                 <TextView
                     android:id="@+id/gendert"
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
                     android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:text="male"
-                    android:textSize="15dp" />
-
+                    android:layout_marginLeft="10dp"
+                    android:textSize="15dp"
+                    android:text="olien" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -151,9 +89,9 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginRight="10dp"
                     android:textSize="15dp"
-                    android:text="Blood Type" />
+                    android:text="First Name"/>
 
                 <TextView
                     android:id="@+id/bloodtypet"
@@ -163,15 +101,17 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
                     android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginLeft="10dp"
                     android:textSize="15dp"
-                    android:text="O+" />
+                    android:text="Olien"/>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -181,27 +121,30 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginRight="10dp"
                     android:textSize="15dp"
-                    android:text="Birthday" />
+                    android:text="Last Name" />
 
                 <TextView
-                    android:id="@+id/birthdaytt"
-                    android:layout_width="100dp"
+                    android:id="@+id/birthdayt"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
                     android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:textSize="15dp"
-                    android:text="11-20-1998" />
+                    android:layout_marginLeft="10dp"
+                    android:text="Liyanage"
+                    android:textSize="15dp" />
+
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -211,27 +154,29 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginRight="10dp"
                     android:textSize="15dp"
-                    android:text="Age" />
+                    android:text="Hospital" />
 
                 <TextView
                     android:id="@+id/aget"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
                     android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginLeft="10dp"
                     android:textSize="15dp"
-                    android:text="22" />
+                    android:text="National Hospital, Colombo" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -241,9 +186,9 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginRight="10dp"
                     android:textSize="15dp"
-                    android:text="Address"/>
+                    android:text="Address" />
 
                 <TextView
                     android:id="@+id/addresst"
@@ -253,105 +198,90 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
                     android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:text="No:170/2, Salmal Uyana, Thalahena"
-                    android:textSize="15dp" />
+                    android:layout_marginLeft="10dp"
+                    android:textSize="15dp"
+                    android:text="488/5A, Thalahena Road, Battaramulla" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/email"
+                    android:id="@+id/mail"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginRight="10dp"
                     android:textSize="15dp"
-                    android:text="Email"/>
+                    android:text="Email" />
 
                 <TextView
-                    android:id="@+id/emailt"
+                    android:id="@+id/email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
                     android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:text="tdg@gmail.com"
-                    android:textSize="15dp" />
+                    android:layout_marginLeft="10dp"
+                    android:textSize="15dp"
+                    android:text="otnliya@outlook.com" />
 
             </LinearLayout>
 
-            <Button
-                android:id="@+id/button1"
-                android:layout_width="400dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="50dp"
-                android:onClick="toActivity8"
-                android:shadowColor="#FFFFFF"
-                android:text="Edit Profile"
-                android:background="@color/colorPrimary"
-                android:textColor="@android:color/white"
-                android:textAllCaps="false"
-                android:textSize="15dp" />
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
-            <!--    <Button-->
-            <!--        android:layout_width="400dp"-->
-            <!--        android:layout_height="wrap_content"-->
-            <!--        android:layout_gravity="center"-->
-            <!--        android:layout_marginTop="10dp"-->
-            <!--        android:onClick="toActivity7"-->
-            <!--        android:text="Mark the status"-->
-            <!--        android:textAllCaps="false"-->
-            <!--        android:textSize="15dp" />-->
+                <TextView
+                    android:id="@+id/weight"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="100dp"
+                    android:layout_marginRight="10dp"
+                    android:textSize="15dp"
+                    android:text="Contact" />
 
+                <TextView
+                    android:id="@+id/weightt"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="100dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="15dp"
+                    android:text="0714548926" />
 
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="400dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="5dp"
-                android:text="View Medical Details"
-                android:textAllCaps="false"
-                android:background="@color/colorPrimary"
-                android:textColor="@android:color/white"
-                android:textSize="15dp" />
+            </LinearLayout>
 
-
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="400dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="5dp"
-                android:text="Donation History"
-                android:textAllCaps="false"
-                android:layout_marginBottom="100dp"
-                android:background="@color/colorPrimary"
-                android:textColor="@android:color/white"
-                android:textSize="15dp" />
 
 
         </LinearLayout>
+
     </ScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bottom_navigation"
-        app:itemBackground="@color/grey"
+        app:itemBackground="@android:color/white"
         app:itemTextColor="@drawable/selector"
         app:itemIconTint="@drawable/selector"
-        app:menu="@menu/menu_navigation_2"
+        app:menu="@menu/menu_navigation"
         android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
