--- a/app/src/main/res/layout/station.xml
+++ b/app/src/main/res/layout/station.xml
@@ -6,13 +6,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".viewMedicalDetails">
+    tools:context=".Station">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#FFFFFF"
         android:orientation="vertical"
+        android:paddingTop="30dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:scrollbars="none">
@@ -23,65 +24,51 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/username"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="40dp"
-                android:text="Donor's Username"
-                android:textSize="25dp" />
-
-            <TextView
                 android:id="@+id/donorid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="40dp"
                 android:textSize="20dp"
-                android:text="Donor ID:xxxxxx" />
-
-            <ImageView
-                android:id="@+id/user"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="30dp"
-                android:src="@drawable/user" />
+                android:text="Station ID" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginLeft="50dp"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/status"
+                    android:id="@+id/gender"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginRight="10dp"
                     android:textSize="15dp"
-                    android:text="Status" />
+                    android:text="Station ID" />
 
                 <TextView
-                    android:id="@+id/statust"
+                    android:id="@+id/gendert"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
                     android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginLeft="10dp"
                     android:textSize="15dp"
-                    android:text="Eligible" />
+                    android:text="S01" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -91,9 +78,9 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginRight="10dp"
                     android:textSize="15dp"
-                    android:text="Blood Type"/>
+                    android:text="Incharge"/>
 
                 <TextView
                     android:id="@+id/bloodtypet"
@@ -103,16 +90,82 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
                     android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginLeft="10dp"
                     android:textSize="15dp"
-                    android:text="O+"/>
+                    android:text="K. T. H. Liyanage"/>
 
             </LinearLayout>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/birthday"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginRight="10dp"
+                    android:textSize="15dp"
+                    android:text="Address" />
+
+                <TextView
+                    android:id="@+id/birthdayt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:text="35, Reid Avenue, Colombo 7"
+                    android:textSize="15dp" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/age"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginRight="10dp"
+                    android:textSize="15dp"
+                    android:text="Email" />
+
+                <TextView
+                    android:id="@+id/aget"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="15dp"
+                    android:text="kth@gmail.com" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -122,9 +175,9 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginRight="10dp"
                     android:textSize="15dp"
-                    android:text="Weight" />
+                    android:text="Contact" />
 
                 <TextView
                     android:id="@+id/weightt"
@@ -134,98 +187,27 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="3dp"
                     android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp"
+                    android:layout_marginLeft="10dp"
                     android:textSize="15dp"
-                    android:text="60 Kg" />
+                    android:text="0714548926" />
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/height"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
-                    android:textSize="15dp"
-                    android:text="Height" />
-
-                <TextView
-                    android:id="@+id/heightt"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:textSize="15dp"
-                    android:text="187 cm" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/diseases"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
-                    android:textSize="15dp"
-                    android:text="Diseases"/>
-
-                <TextView
-                    android:id="@+id/diseasest"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginRight="40dp"
-                    android:layout_marginLeft="40dp"
-                    android:text="None"
-                    android:textSize="15dp" />
-
-            </LinearLayout>
-
-            <Button
-            android:id="@+id/button"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:shadowColor="#FFFFFF"
-            android:text="Done"
-            android:background="@color/colorPrimary"
-            android:textColor="@android:color/white"
-            android:textAllCaps="false"
-            android:textSize="15dp" />
 
 
 
         </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bottom_navigation"
-        app:itemBackground="@color/grey"
+        app:itemBackground="@android:color/white"
         app:itemTextColor="@drawable/selector"
         app:itemIconTint="@drawable/selector"
-        app:menu="@menu/menu_navigation_2"
+        app:menu="@menu/menu_navigation"
         android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
