--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
         android:id="@+id/map"
         android:title="Map"
-        android:icon="@drawable/ic_dashboard" />
+        android:icon="@drawable/ic_map" />
 
     <item
         android:id="@+id/home"
@@ -11,7 +12,8 @@
         android:icon="@drawable/ic_home" />
 
     <item
-        android:id="@+id/profile"
-        android:title="Profile"
-        android:icon="@drawable/ic_info" />
+        android:id="@+id/donors"
+        android:title="Donors"
+        android:icon="@drawable/ic_donors" />
+
 </menu>
